--- a/Client/src/theme/variables.scss
+++ b/Client/src/theme/variables.scss
@@ -21,7 +21,11 @@ $app-direction: ltr;
 // the Sass variables found in Ionic's source scss files.
 // To view all the possible Ionic variables, see:
 // http://ionicframework.com/docs/theming/overriding-ionic-variables/
-
+$text-color: white;
+$background-color: #2b2f5b;
+$toolbar-md-title-text-color: #fff;
+$toolbar-ios-title-text-color: #fff;
+$toolbar-wp-title-text-color: #fff;
 
 
 
@@ -35,7 +39,7 @@ $app-direction: ltr;
 
 $colors: (
   primary:    #488aff,
-  secondary:  #32db64,
+  secondary:  #2b2f5b,
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222
